[gd_scene load_steps=6 format=3 uid="uid://flaiq8fdiflo"]

[ext_resource type="PackedScene" uid="uid://b1rejq3d3efwl" path="res://Component/missiles/missile_template.tscn" id="1_bxiaj"]
[ext_resource type="Script" path="res://missile_template.gd" id="2_eesph"]
[ext_resource type="Texture2D" uid="uid://d1xsuny35cgdk" path="res://Art_Components/missile/spr_missile_half.png" id="3_r3onn"]

[sub_resource type="SpriteFrames" id="SpriteFrames_e7c7u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_r3onn")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yocoi"]
radius = 3.0
height = 33.991

[node name="missile_dumbfire" instance=ExtResource("1_bxiaj")]
position = Vector2(181, 88)
script = ExtResource("2_eesph")

[node name="AnimatedSprite2D" parent="." index="0"]
rotation = -1.5708
sprite_frames = SubResource("SpriteFrames_e7c7u")

[node name="RayCast2D" parent="AnimatedSprite2D" index="0"]
rotation = -1.5708

[node name="Area2D" parent="AnimatedSprite2D" index="1"]
collision_layer = 8
collision_mask = 128

[node name="VisibleOnScreenEnabler2D" parent="AnimatedSprite2D/Area2D" index="0"]
position = Vector2(3.17722, 0)
scale = Vector2(2.23027, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/Area2D" index="1"]
rotation = -1.58007
shape = SubResource("CapsuleShape2D_yocoi")

[node name="TrackingTimer" type="Timer" parent="." index="1"]
wait_time = 0.5
one_shot = true

[node name="InitialFireTimer" type="Timer" parent="." index="2"]
wait_time = 0.15
one_shot = true
autostart = true

[connection signal="area_entered" from="AnimatedSprite2D/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="AnimatedSprite2D/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_exited" from="AnimatedSprite2D/Area2D/VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
[connection signal="timeout" from="InitialFireTimer" to="." method="_on_initial_fire_timer_timeout"]
